Fixed naming from previous project

--- a/meson.build
+++ b/meson.build
@@ -2,7 +2,7 @@ logger_includes = include_directories('src/public')
 logger_sources = ['src/private/logger.cpp']
 logger_deps = []
 
-flow_logger_lib = shared_library(
+logger = shared_library(
     'logger',
      logger_sources,
      include_directories : logger_includes,
