--- a/meson.build
+++ b/meson.build
@@ -5,6 +5,12 @@ if check_for_logger == false
    logger_includes = include_directories('.')
    logger_sources = ['logger/logger.cpp']
    logger_deps = []
+   
+   arg = ''
+   if get_option('buildtype').startswith('debug')
+      arg = '-DDEBUG'
+   endif
+
 
    check_for_logger = true
 
@@ -13,6 +19,7 @@ if check_for_logger == false
         logger_sources,
         include_directories : logger_includes,
         dependencies: logger_deps,
+        cpp_args: arg
    )
 
 endif
